crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..38,
            value: FString(
                ExprFString {
                    range: 0..38,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..38,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 2..6,
                                                value: "mix ",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 6..13,
                                                expression: Name(
                                                    ExprName {
                                                        range: 7..11,
                                                        id: "user",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                        Literal(
                                            FStringLiteralElement {
                                                range: 13..28,
                                                value: " with text and ",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 28..37,
                                                expression: Name(
                                                    ExprName {
                                                        range: 29..35,
                                                        id: "second",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
