crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__fstring_parse_self_documenting_format.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..14,
            value: FString(
                ExprFString {
                    range: 0..14,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..14,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..13,
                                                expression: Name(
                                                    ExprName {
                                                        range: 3..7,
                                                        id: "user",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 9..12,
                                                        elements: [
                                                            Literal(
                                                                FStringLiteralElement {
                                                                    range: 9..12,
                                                                    value: ">10",
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
